Atualiza conteúdo e estilo do site

--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
         <section>
             <h3>Sobre mim</h3>
             <p>
-                𝐎𝐥á! 𝐌𝐞 𝐜𝐡𝐚𝐦𝐨 𝐂𝐚𝐫𝐥𝐨𝐬 𝐆𝐮𝐬𝐭𝐚𝐯𝐨, 𝐭𝐞𝐧𝐡𝐨 𝟐𝟏 𝐚𝐧𝐨𝐬 𝐞 𝐬𝐨𝐮 𝐜𝐨𝐦𝐩𝐥𝐞𝐭𝐚𝐦𝐞𝐧𝐭𝐞 𝐚𝐩𝐚𝐢𝐱𝐨𝐧𝐚𝐝𝐨 𝐩𝐨𝐫 𝐭𝐞𝐜𝐧𝐨𝐥𝐨𝐠𝐢𝐚 𝐞 𝐝𝐞𝐬𝐞𝐧𝐯𝐨𝐥𝐯𝐢𝐦𝐞𝐧𝐭𝐨 𝐝𝐞 𝐬𝐨𝐟𝐭𝐰𝐚𝐫𝐞. 𝐃𝐞𝐬𝐝𝐞 𝐜𝐞𝐝𝐨, 𝐦𝐞𝐫𝐠𝐮𝐥𝐡𝐞𝐢 𝐧𝐞𝐬𝐬𝐞 𝐮𝐧𝐢𝐯𝐞𝐫𝐬𝐨 𝐞, 𝐪𝐮𝐚𝐧𝐭𝐨 𝐦𝐚𝐢𝐬 𝐚𝐩𝐫𝐞𝐧𝐝𝐨, 𝐦𝐚𝐢𝐬 𝐦𝐞 𝐯𝐞𝐣𝐨 𝐦𝐨𝐭𝐢𝐯𝐚𝐝𝐨 𝐚 𝐜𝐫𝐢𝐚𝐫 𝐞 𝐞𝐱𝐩𝐥𝐨𝐫𝐚𝐫 𝐧𝐨𝐯𝐚𝐬 𝐢𝐝𝐞𝐢𝐚𝐬. 𝐉á 𝐝𝐞𝐬𝐞𝐧𝐯𝐨𝐥𝐯𝐢 𝐩𝐫𝐨𝐣𝐞𝐭𝐨𝐬 𝐩𝐫ó𝐩𝐫𝐢𝐨𝐬, 𝐜𝐫𝐢𝐞𝐢 𝐞𝐬𝐭𝐞 𝐬𝐢𝐭𝐞 𝐩𝐚𝐫𝐚 𝐜𝐨𝐦𝐩𝐚𝐫𝐭𝐢𝐥𝐡𝐚𝐫 𝐮𝐦 𝐩𝐨𝐮𝐜𝐨 𝐝𝐨 𝐦𝐞𝐮 𝐭𝐫𝐚𝐛𝐚𝐥𝐡𝐨 𝐞 𝐬𝐢𝐠𝐨 𝐦𝐞 𝐝𝐞𝐝𝐢𝐜𝐚𝐧𝐝𝐨 𝐭𝐨𝐝𝐨𝐬 𝐨𝐬 𝐝𝐢𝐚𝐬 𝐚 𝐜𝐫𝐞𝐬𝐜𝐞𝐫 𝐧𝐚 á𝐫𝐞𝐚. 𝐅𝐢𝐳 𝐜𝐮𝐫𝐬𝐨𝐬 𝐝𝐞 𝐂# 𝐟𝐨𝐜𝐚𝐝𝐨 𝐞𝐦 𝐣𝐨𝐠𝐨𝐬 𝟑𝐃, 𝐨𝐧𝐝𝐞 𝐩𝐮𝐝𝐞 𝐜𝐨𝐥𝐨𝐜𝐚𝐫 𝐞𝐦 𝐩𝐫á𝐭𝐢𝐜𝐚 𝐦𝐢𝐧𝐡𝐚 𝐜𝐫𝐢𝐚𝐭𝐢𝐯𝐢𝐝𝐚𝐝𝐞 𝐞 𝐥ó𝐠𝐢𝐜𝐚 𝐝𝐞 𝐩𝐫𝐨𝐠𝐫𝐚𝐦𝐚çã𝐨. 𝐀𝐭𝐮𝐚𝐥𝐦𝐞𝐧𝐭𝐞, 𝐞𝐬𝐭𝐨𝐮 𝐞𝐬𝐭𝐮𝐝𝐚𝐧𝐝𝐨 𝐇𝐓𝐌𝐋 𝐞 𝐂𝐒𝐒 𝐜𝐨𝐦 𝐟𝐨𝐜𝐨 𝐞𝐦 𝐝𝐞𝐬𝐞𝐧𝐯𝐨𝐥𝐯𝐢𝐦𝐞𝐧𝐭𝐨 𝐰𝐞𝐛. 𝐄𝐬𝐭𝐞 𝐬𝐢𝐭𝐞 é 𝐬ó 𝐨 𝐜𝐨𝐦𝐞ç𝐨 — 𝐦𝐢𝐧𝐡𝐚 𝐦𝐞𝐧𝐭𝐞 𝐞𝐬𝐭á 𝐜𝐡𝐞𝐢𝐚 𝐝𝐞 𝐢𝐝𝐞𝐢𝐚𝐬 𝐞 𝐩𝐫𝐞𝐭𝐞𝐧𝐝𝐨 𝐜𝐨𝐧𝐬𝐭𝐫𝐮𝐢𝐫 𝐦𝐮𝐢𝐭𝐨 𝐦𝐚𝐢𝐬. 𝐒𝐨𝐮 𝐦𝐨𝐯𝐢𝐝𝐨 𝐩𝐞𝐥𝐚 𝐩𝐚𝐢𝐱ã𝐨 𝐝𝐞 𝐯𝐞𝐫 𝐚𝐥𝐠𝐨 𝐠𝐚𝐧𝐡𝐚𝐧𝐝𝐨 𝐯𝐢𝐝𝐚 𝐚 𝐩𝐚𝐫𝐭𝐢𝐫 𝐝𝐞 𝐜ó𝐝𝐢𝐠𝐨, 𝐞 𝐪𝐮𝐞𝐫𝐨 𝐜𝐨𝐧𝐭𝐢𝐧𝐮𝐚𝐫 𝐭𝐫𝐢𝐥𝐡𝐚𝐧𝐝𝐨 𝐞𝐬𝐬𝐞 𝐜𝐚𝐦𝐢𝐧𝐡𝐨 𝐜𝐨𝐦 𝐝𝐞𝐝𝐢𝐜𝐚çã𝐨 𝐞 𝐯𝐨𝐧𝐭𝐚𝐝𝐞 𝐝𝐞 𝐟𝐚𝐳𝐞𝐫 𝐚 𝐝𝐢𝐟𝐞𝐫𝐞𝐧ç𝐚.
+                Olá! Meu nome é Carlos Gustavo, tenho 21 anos e sou apaixonado por tecnologia e desenvolvimento de software. Desde cedo, mergulhei nesse universo com entusiasmo, e a cada nova linha de código que escrevo, reforço a certeza de que essa é a minha verdadeira vocação.
+                Sou movido pela curiosidade, criatividade e pelo desejo constante de aprender. Já desenvolvi projetos próprios e criei este site com o propósito de partilhar um pouco do meu trabalho e da minha jornada no mundo da programação. Acredito que a tecnologia tem o poder de transformar ideias em soluções reais — e é exatamente isso que me motiva todos os dias.
+                Tenho formação prática em C# com foco em desenvolvimento de jogos 3D, onde exercitei minha lógica e criatividade ao máximo. Atualmente, estou aprofundando meus conhecimentos em HTML e CSS, com foco em desenvolvimento web, enquanto continuo expandindo minhas competências em outras linguagens e ferramentas.
+                Este site é apenas o começo. Tenho muitos projetos e ideias em andamento, e estou comprometido em crescer profissionalmente, contribuir com soluções inovadoras e gerar impacto positivo através da tecnologia.
+                Se procura alguém dedicado, criativo, com sede de aprender e evoluir constantemente, será um prazer fazer parte do seu time.
             </p>
         </section>
         <section>
@@ -55,4 +59,4 @@
     </footer>
 
 </body>
-</html> 
+</html>
